--- a/cyclid.yaml
+++ b/cyclid.yaml
@@ -15,9 +15,9 @@ stages:
   - action: script
     script:
     - '#!/bin/bash -x'
-    - curl -s -L -O https://packages.chef.io/stable/ubuntu/12.04/chefdk_0.18.30-1_amd64.deb
+    - curl -s -L -O https://packages.chef.io/files/stable/chefdk/1.5.0/ubuntu/14.04/chefdk_1.5.0-1_amd64.deb
       || exit 1
-    - sudo dpkg -i chefdk_0.18.30-1_amd64.deb || exit 1
+    - sudo dpkg -i chefdk_1.5.0-1_amd64.deb || exit 1
 - name: lint
   steps:
   - action: command
@@ -43,13 +43,10 @@ stages:
     message: 'Job %{organization}/%{job_name} (job #%{job_id}) failed.'
 sequence:
 - stage: install-chefdk
-  on_success: lint
   on_failure: failure
 - stage: lint
-  on_success: chefspec
   on_failure: failure
 - stage: chefspec
-  on_success: test-kitchen
   on_failure: failure
 - stage: test-kitchen
   on_success: success
